src/test/deca/context/valid/LE/this1.deca
// Historique:
//    cree le 19/01/2022

class C1 {
    int a ;

    int m1 (int valeur ) {
        a = valeur ;
        return a;
    }

    void m2 (int a){
        this.a = a;
    }

    void m3 (){
        a = m1(18);
    }
}