src/test/deca/context/invalid/LE/ThisMain.deca
// Historique:
//    cree le 22/01/2022

class C1{
    int a ;
}

{
    this.a = 4 ;
}